# designing_unique_crews_and_agents

./: README.md  pyproject.toml
src/designing_unique_crews_and_agents/: crew.py  main.py
src/designing_unique_crews_and_agents/config/: agents.yaml  agents1.yaml  agents2.yaml  tasks.yaml  tasks1.yaml  tasks2.yaml
