[project]
name = "designing_unique_crews_and_agents"
version = "0.1.0"
description = "designing_unique_crews_and_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
designing_unique_crews_and_agents = "designing_unique_crews_and_agents.main:run"
run_crew = "designing_unique_crews_and_agents.main:run"
train = "designing_unique_crews_and_agents.main:train"
replay = "designing_unique_crews_and_agents.main:replay"
test = "designing_unique_crews_and_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
